--- a/reportes jasper/reporte7.jrxml
+++ b/reportes jasper/reporte7.jrxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
+<!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.4.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporte7" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2b442691-1b6c-4dbd-bee7-c770123dcb99">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="JDBC Adapter"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<parameter name="fecha_inicio" class="java.sql.Date">
-		<defaultValueExpression><![CDATA["01/01/2019"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="fecha_fin" class="java.sql.Date">
-		<defaultValueExpression><![CDATA["01/01/2020"]]></defaultValueExpression>
-	</parameter>
+	<parameter name="fecha_inicio" class="java.sql.Date"/>
+	<parameter name="fecha_fin" class="java.sql.Date"/>
 	<queryString language="plsql">
 		<![CDATA[{CALL reporte_7($P{ORACLE_REF_CURSOR}, $P{fecha_inicio}, $P{fecha_fin})}]]>
 	</queryString>
