--- a/reportes jasper/reporte13.jrxml
+++ b/reportes jasper/reporte13.jrxml
@@ -1,56 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporte13" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2f7f15dc-1f35-4dda-a025-f0ca6cea8bde">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="JDBC Adapter"/>
+<!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.4.1  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporte2" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="0" bottomMargin="0" uuid="f5e59eed-6f80-4b0b-bd95-324e92cd0ac0">
+	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="BasesII"/>
 	<parameter name="fecha_inicio" class="java.sql.Date">
-		<defaultValueExpression><![CDATA["01/01/2019"]]></defaultValueExpression>
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[TODAY( )]]></defaultValueExpression>
 	</parameter>
-	<parameter name="fecha_fin" class="java.sql.Date">
-		<defaultValueExpression><![CDATA["01/01/2020"]]></defaultValueExpression>
-	</parameter>
+	<parameter name="fecha_fin" class="java.sql.Date"/>
 	<queryString language="plsql">
 		<![CDATA[{CALL reporte_13($P{ORACLE_REF_CURSOR}, $P{fecha_inicio}, $P{fecha_fin})}]]>
 	</queryString>
-	<field name="LOGO" class="java.awt.Image">
-		<property name="com.jaspersoft.studio.field.label" value="LOGO"/>
-	</field>
-	<field name="INICIO" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="INICIO"/>
-	</field>
-	<field name="FINALE" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="FINALE"/>
-	</field>
-	<field name="ORIGEN" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="ORIGEN"/>
-	</field>
-	<field name="DESTINO" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="DESTINO"/>
-	</field>
-	<field name="TOTAL" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.label" value="TOTAL"/>
-	</field>
+	<field name="LOGO" class="java.awt.Image"/>
+	<field name="INICIO" class="java.lang.String"/>
+	<field name="FINALE" class="java.lang.String"/>
+	<field name="ORIGEN" class="java.lang.String"/>
+	<field name="DESTINO" class="java.lang.String"/>
+	<field name="TOTAL" class="java.math.BigDecimal"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="79" splitType="Stretch"/>
-	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="111">
+			<textField>
+				<reportElement mode="Opaque" x="-20" y="0" width="595" height="110" forecolor="#FFFFFF" backcolor="#4C51D9" uuid="b1ae67a3-0237-42f5-b5d3-f403e7693e95"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="24"/>
+				</textElement>
+				<textFieldExpression><![CDATA["MEJORES SEGUROS ENTRE  " +  UPPER(DATEFORMAT($P{fecha_inicio},"dd/MM/yyyy") )+  " "+UPPER(DATEFORMAT($P{fecha_fin},"dd MMM yyyy") )]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch"/>
+		<band height="63" splitType="Stretch">
+			<staticText>
+				<reportElement stretchType="ElementGroupHeight" mode="Opaque" x="-20" y="-1" width="120" height="50" forecolor="#FFFFFF" backcolor="#6269D9" uuid="7a4cc732-55c9-4e19-9c0e-e36e51525295">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba308798-46ef-4b81-a34f-61bba02dba5c"/>
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[LOGO DE ASEGURADORA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="ElementGroupHeight" mode="Opaque" x="100" y="-1" width="111" height="50" forecolor="#FFFFFF" backcolor="#6269D9" uuid="5b3c7d67-000d-44fb-b683-2fe051682444">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba308798-46ef-4b81-a34f-61bba02dba5c"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[FECHA (DESDE - HASTA)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="ElementGroupHeight" mode="Opaque" x="340" y="-1" width="130" height="50" forecolor="#FFFFFF" backcolor="#6269D9" uuid="5ff07a2f-1b84-4aa6-8a1a-b5b21779c0ff">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba308798-46ef-4b81-a34f-61bba02dba5c"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[LUGAR DE DESTINO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="ElementGroupHeight" mode="Opaque" x="470" y="-1" width="105" height="50" forecolor="#FFFFFF" backcolor="#6269D9" uuid="385e5426-cf61-4a16-8d53-159efb98e5d6">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba308798-46ef-4b81-a34f-61bba02dba5c"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[CANTIDAD DE SERVICIOS]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="ElementGroupHeight" mode="Opaque" x="210" y="-1" width="130" height="50" forecolor="#FFFFFF" backcolor="#6269D9" uuid="ffb0f29c-995d-4548-9442-a647059ba126">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba308798-46ef-4b81-a34f-61bba02dba5c"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[LUGAR DE ORIGEN]]></text>
+			</staticText>
+		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="129" splitType="Stretch">
+			<textField>
+				<reportElement x="352" y="-11" width="107" height="134" uuid="ddf3eeaa-722c-4657-b9cd-49fbf15a609a">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8d554557-80bd-435a-82d0-b7ec394c1724"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{DESTINO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="104" y="-14" width="101" height="134" uuid="0975ae8b-582a-497f-a145-289111bd1f0b">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3b6bc807-22d9-488c-9068-ea2068866b8d"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{INICIO}+"-"+$F{FINALE}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="478" y="-14" width="95" height="140" uuid="6e4fdc17-dc70-4e63-a1ba-8968c260d1cd">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4642f1cf-f204-449e-8b37-46f95697fccd"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{TOTAL}]]></textFieldExpression>
+			</textField>
+			<image hAlign="Center" vAlign="Middle" isUsingCache="false" onErrorType="Blank">
+				<reportElement x="-11" y="4" width="100" height="105" uuid="46ead5f0-cf4d-4f2b-b800-a218e4d139a0"/>
+				<imageExpression><![CDATA[$F{LOGO}]]></imageExpression>
+			</image>
+			<rectangle>
+				<reportElement mode="Opaque" x="100" y="-63" width="1" height="186" forecolor="#7D83E8" uuid="c1c8cf6a-1240-4392-8571-c0d54e301b39"/>
+				<graphicElement>
+					<pen lineColor="#7D83E8"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Opaque" x="210" y="-63" width="1" height="186" forecolor="#7D83E8" uuid="e74b6148-9f53-4a84-ac50-874f4a9f3aba"/>
+				<graphicElement>
+					<pen lineColor="#7D83E8"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Opaque" x="340" y="-63" width="1" height="186" forecolor="#7D83E8" uuid="0fd754d5-0ef7-49ba-a078-0ec5a5f1c3ff"/>
+				<graphicElement>
+					<pen lineColor="#7D83E8"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Opaque" x="470" y="-64" width="1" height="187" forecolor="#7D83E8" uuid="4e725592-37b7-4fc1-861f-bc811a2ad313"/>
+				<graphicElement>
+					<pen lineColor="#7D83E8"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Opaque" x="-20" y="123" width="595" height="1" forecolor="#7D83E8" uuid="7e7a3419-1b7e-4817-bae7-8b575f496b6a"/>
+				<graphicElement>
+					<pen lineColor="#7D83E8"/>
+				</graphicElement>
+			</rectangle>
+			<textField>
+				<reportElement x="222" y="-14" width="107" height="134" uuid="68bdc6a9-6edd-461c-8d6a-98a893123fc5">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3b6bc807-22d9-488c-9068-ea2068866b8d"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{ORIGEN}]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="50">
+			<textField>
+				<reportElement mode="Opaque" x="-20" y="3" width="595" height="47" forecolor="#FFFFFF" backcolor="#4C51D9" uuid="ae9eb17d-82aa-4461-8096-b0255f21bdab"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Trebuchet MS" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["CARACAS, VENEZUELA. " + DATEFORMAT(NOW(),"dd-MM-yyyy")]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
